app/src/main/java/com/example/mobileskillupsession/dip/good/CreditCard.kt
package com.example.mobileskillupsession.dip.good

class CreditCard : ICardPayment{

    override fun makePayment(amount: Double) {
        TODO("Not yet implemented")
    }


}