app/src/main/java/com/example/mobileskillupsession/dip/bad/CreditCard.kt
package com.example.mobileskillupsession.dip.bad

class CreditCard {

    fun makePayment(amount: Double) {
        println("make payment $amount")
    }
}